fixed home hero and nav spacing on mobile

--- a/client/src/components/GlobalNavBar/style.css
+++ b/client/src/components/GlobalNavBar/style.css
@@ -21,7 +21,7 @@
 @media only screen and (max-width: 575px) {
 
     .global-nav__logo {
-        margin-bottom: 30px;
+        margin-bottom: 25px;
         width: 220px;
         transition: ease .5s;
     }
